fixed bottom of project card being cut off by footer

--- a/src/Portfolio.css
+++ b/src/Portfolio.css
@@ -1,5 +1,5 @@
 .imgCard {
-  padding-top: 2.5rem;
+  padding-top: 3rem;
 
   text-align: center;
   user-select: "text";
